--- a/code/registry/templates/registry_detail/registry_modals/registry_contacts_delete.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_contacts_delete.html
@@ -7,9 +7,9 @@
                 </h4>
             </div>
             <div class="modal-body">
-              <span class="text">Cliente: {{ contact.registry.nome }}</span><br>
-              <span class="text">Email: {{contact.email}} </span><br>
-              <span class="text">Numero: {{contact.numero}}</span><br>
+              <span class="text"><b>Cliente</b> {{ contact.registry.name }}</span><br>
+              <span class="text"><b>Email</b> {{contact.email}} </span><br>
+              <span class="text"><b>Numero</b> {{contact.phone_number}}</span><br>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">
