--- a/code/processo/templates/lawsuit_detail.html
+++ b/code/processo/templates/lawsuit_detail.html
@@ -26,7 +26,7 @@
             </li>
         </ul>
     </div>
-    <div class="card-body">
+    <div class="card-body table-responsive p-0">
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade {% if not request.GET %}show active{% endif %}" id="lawsuit-infos" role="tabpanel" aria-labelledby="lawsuit-tab">
                 {% include "lawsuit_detail/lawsuit_infos.html" %}
