--- a/code/processo/templates/lawsuit_detail/lawsuit_values.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_values.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </form>
-        <div class="card-body p-0">
+        <div class="card-body table-responsive p-0">
             <table class="table">
                 <thead>
                     <tr>
