--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -28,7 +28,7 @@
                 </div>
             </form>
         </div>
-        <div class="card-body p-0">
+        <div class="card-body table-responsive p-0">
             <table class="table">
                 <thead>
                     <tr>
@@ -72,9 +72,9 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <div class="card-footer clearfix">
-                {% include "base/pagination.html" %}
-            </div>
+        </div>
+        <div class="card-footer clearfix">
+            {% include "base/pagination.html" %}
         </div>
     </div>
 </div>
