--- a/code/registry/templates/registry_detail/registry_address.html
+++ b/code/registry/templates/registry_detail/registry_address.html
@@ -1,49 +1,49 @@
 {% include "registry_detail/registry_modals/registry_address_create.html" %}
-<div class="card-body p-0">
-    {% if registry.registry_address.first %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Endereço</th>
-                <th>Numero</th>
-                <th>Complemento</th>
-                <th>Cep</th>
-                <th>Editar</th>
-                <th>Apagar</th>
-            </tr>
-        </thead>
-        {% for address in registry.registry_address.all %}
-        <tbody>
-            <tr>
-                <td>{{address.endereco}}</td>
-                <td>{{address.numero}}</td>
-                <td>{{address.complemento}}</td>
-                <td>{{address.cep}}</td>
-                                <td>
-                    <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#address-edit-modal-{{address.pk}}">
-                        Editar
-                    </button>
-                </td>
-                <td>
-                    <a href="" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#address-delete-modal-{{address.pk}}" >
-                        Apagar
-                    </a>
-                </td>
-            </tr>
-            {% include "registry_detail/registry_modals/registry_address_delete.html" %}
-            {% include "registry_detail/registry_modals/registry_address_edit.html" %}
-        </tbody>
-        {% endfor %}
-    </table>
-    {% else %}
-    <div class="text text-muted" style="margin-left: 30%;">
-        <h2><i class="fas fa-map-marker-alt"></i></i> Sem endereços do registry por aqui</h2>
+<div class="card" style="width: 100%">
+    <div class="card-body table-responsive p-0">
+        <div class="card-content">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Endereço</th>
+                        <th>Numero</th>
+                        <th>Complemento</th>
+                        <th>Cep</th>
+                        <th>Referência</th>
+                        <th>Editar</th>
+                        <th>Apagar</th>
+                    </tr>
+                </thead>
+                {% for address in registry.registry_address.all %}
+                <tbody>
+                    <tr>
+                        <td>{{address.address}}</td>
+                        <td>{{address.address_number}}</td>
+                        <td>{{address.complement}}</td>
+                        <td>{{address.cep}}</td>
+                        <td>{{address.reference}}</td>
+                        <td>
+                            <a href="" data-toggle="modal" data-target="#address-edit-modal-{{address.pk}}">
+                                <i class="fas fa-edit" style="color: #89a2cd;"></i>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="" data-toggle="modal" data-target="#address-delete-modal-{{address.pk}}" >
+                                <i class="fas fa-trash-alt" style="color: #ff0000;"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% include "registry_detail/registry_modals/registry_address_delete.html" %}
+                    {% include "registry_detail/registry_modals/registry_address_edit.html" %}
+                </tbody>
+                {% endfor %}
+            </table>
+        </div>
     </div>
-    {% endif %}
-    <div>
-        <button class="btn btn-success" data-toggle="modal" data-target="#registry-address-create">
-            Criar novo endereço de registro
-        </button>
-    </div>
+</div>
+<div>
+    <button class="btn btn-success" data-toggle="modal" data-target="#registry-address-create">
+        Criar novo endereço de registro
+    </button>
 </div>
     
