--- a/code/registry/templates/registry_detail/registry_contacts.html
+++ b/code/registry/templates/registry_detail/registry_contacts.html
@@ -1,45 +1,43 @@
 {% include "registry_detail/registry_modals/registry_contacts_create.html" %}
-<div class="card-body p-0">
-    {% if registry.registry_contact.first %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Email</th>
-                <th>Numero</th>
-                <th>Editar</th>
-                <th>Apagar</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for contact in registry.registry_contact.all %}
-            <tr>
-                <td>{{contact.email}}</td>
-                <td>{{contact.numero}}</td>
-                <td>
-                    <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#contacts-edit-modal-{{contact.pk}}">
-                        Editar
-                    </button>
-                </td>
-                <td>
-                    <a href="" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#contacts-delete-modal-{{contact.pk}}" >
-                        Apagar
-                    </a>
-                </td>
-            </tr>
-            {% include "registry_detail/registry_modals/registry_contacts_delete.html" %}
-            {% include "registry_detail/registry_modals/registry_contacts_edit.html" %}
-            {% endfor %}
-        </tbody>
-    </table>
-    {% else %}
-    <div class="text text-muted" style="margin-left: 30%;">
-        <h2><i class="fas fa-address-book"></i> Sem contatos por aqui</h2>
+<div class="card" style="width: 100%">
+    <div class="card-body table-responsive p-0">
+        <div class="card-content">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Email</th>
+                        <th>Numero</th>
+                        <th>Editar</th>
+                        <th>Apagar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for contact in registry.registry_contact.all %}
+                    <tr>
+                        <td>{{contact.email}}</td>
+                        <td>{{contact.phone_number}}</td>
+                        <td>
+                            <a href="" data-toggle="modal" data-target="#contacts-edit-modal-{{contact.pk}}">
+                                <i class="fas fa-edit" style="color: #89a2cd;"></i>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="" data-toggle="modal" data-target="#contacts-delete-modal-{{contact.pk}}" >
+                                <i class="fas fa-trash-alt" style="color: #ff0000;"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    {% include "registry_detail/registry_modals/registry_contacts_delete.html" %}
+                    {% include "registry_detail/registry_modals/registry_contacts_edit.html" %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-    {% endif %}
-    <div>
-        <button class="btn btn-success" data-toggle="modal" data-target="#registry-contacts-create">
-            Criar novo contato de registro
-        </button>
-    </div>
+</div>
+<div>
+    <button class="btn btn-success" data-toggle="modal" data-target="#registry-contacts-create">
+        Criar novo contato de registro
+    </button>
 </div>
     
