--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -28,7 +28,7 @@
                 </div>
             </form>
         </div>
-        <div class="card-body p-0">
+        <div class="card-body table-responsive p-0">
             <table class="table">
                 <thead>
                     <tr>
@@ -52,10 +52,12 @@
                                 <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% endif %}
 
+                            {% if lawsuit.colaborador %}
                             {% if lawsuit.colaborador.image %}
                                 <img src="{{ lawsuit.colaborador.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% else %}
                                 <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                            {% endif %}
                             {% endif %}
                         </td>
                         <td>{{lawsuit.advogado_responsavel}} </td>
@@ -70,9 +72,9 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <div class="card-footer clearfix">
-                {% include "base/pagination.html" %}
-            </div>
+        </div>
+        <div class="card-footer clearfix">
+            {% include "base/pagination.html" %}
         </div>
     </div>
 </div>
