--- a/code/processo/templates/lawsuit_create.html
+++ b/code/processo/templates/lawsuit_create.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="card-header">
             <div class="card-title">
-                <span class="mont-serrat" style="font-size: 24px;">Criando novo processo</span>
+                <span class="mont-serrat" style="font-size: 24px;">Registrando novo processo</span>
             </div>
         </div>
         <div class="card-body">
