--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link sidebar-text">
+                    <a href="{% url 'lawyer:lawyer_list' %}" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-user-tie" style="color: #ffffff;"></i>
                             &nbsp Advogados
