--- a/code/project/templates/login/register.html
+++ b/code/project/templates/login/register.html
@@ -12,7 +12,7 @@
 		<div class="form">
             <h1>Macedo & Azevedo</h1>
 			<h2>Crie sua conta</h2>
-			<p>Preencha o formulário abaixo para criar sua conta.</p>
+			<p>Preencha o formulário abaixo para Criando sua conta.</p>
             
 			<form class="login-form">
 				<input class="form-control" type="text" placeholder="Nome"/>
@@ -21,7 +21,7 @@
 				<input class="form-control" type="password" placeholder="Senha"/>
 				<input class="form-control" type="password" placeholder="Confirmar senha"/>
 				<input class="form-control" type="text" placeholder="Token Informado no Email"/>
-				<button>Criar conta</button>
+				<button>Criando conta</button>
 				<div class="container">
                     <div class="row">
                         <div class="col">
