--- a/code/registry/templates/registry_detail/registry_address.html
+++ b/code/registry/templates/registry_detail/registry_address.html
@@ -43,7 +43,7 @@
 </div>
 <div>
     <button class="btn btn-success" data-toggle="modal" data-target="#registry-address-create">
-        Criar novo endereço de registro
+        Criando novo endereço de registro
     </button>
 </div>
     
