--- a/code/registry/templates/registry_detail/registry_modals/registry_address_create.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_address_create.html
@@ -22,7 +22,7 @@
                         {% endif %}
                         {% endfor %}
                         <div>
-                            <button type="submit" class="btn btn-primary">Criar</button>
+                            <button type="submit" class="btn btn-primary">Criando</button>
                             <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                         </div>
                 </form>
