lawyer edit and delete function and cpf field added on lawyer form.

--- a/code/advogado/templates/lawyer_detail/lawyer_modals/lawyer_delete.html
+++ b/code/advogado/templates/lawyer_detail/lawyer_modals/lawyer_delete.html
@@ -3,11 +3,13 @@
         <div class="modal-content">
             <div class="modal-header" >
                 <h1 class="modal-title mont-serrat" >
-                    Você está apagando este processo<br>
+                    Você está apagando este advogado<br>
                 </h1>
             </div>
             <div class="modal-body">
-                <span class="text">Codigo do Processo: {{ lawyer.codigo_processo }}</span><br>
+                <span class="text">Advogado: {{ lawyer.name }} </span><br>
+                <span class="text">CPF: {{ lawyer.cpf }} </span><br>
+                <span class="text">Oab: {{ lawyer.oab }} </span><br>
 
             </div>
         <div class="modal-footer">
