--- a/code/advogado/templates/lawyer_detail.html
+++ b/code/advogado/templates/lawyer_detail.html
@@ -59,6 +59,7 @@
         <div class="card-body">
             <div class="tab-content">
                 <div class="tab-pane active" id="infos">
+                    {% include "lawyer_detail/lawyer_infos.html" %}
                 </div>
                 <div class="tab-pane" id="address">
                 </div>
