--- a/code/advogado/templates/lawyer_detail/lawsuit_infos.html
+++ b/code/advogado/templates/lawyer_detail/lawsuit_infos.html
@@ -26,7 +26,7 @@
             <div class="info-box bg-light">
                 <div class="info-box-content">
                     <span class="info-box-text text-center text-muted mont-serrat">Custos do Processo</span>
-                    <span class="info-box-number text-center text-danger mb-0 mont-serrat">- R${{lawsuit.coust}}</span>
+                    <span class="info-box-number text-center text-danger mb-0 mont-serrat">- R${{lawsuit.cost}}</span>
                 </div>
             </div>
         </div>
