--- a/code/advogado/templates/lawyer_list.html
+++ b/code/advogado/templates/lawyer_list.html
@@ -28,7 +28,7 @@
                 </div>
             </form>
         </div>
-        <div class="card-body table-responsive p-0">
+        <div class="card-body table-responsive table-hover p-0">
             <table class="table">
                 <thead>
                     <tr>
@@ -37,6 +37,8 @@
                         <th>Email</th>
                         <th>Usuario</th>
                         <th>Oab</th>
+                        <th>Receita</th>
+                        <th>Processos</th>
                         <th>Apagar</th>
                     </tr>
                 </thead>
@@ -44,10 +46,10 @@
                     {% for lawyer in page.object_list %}
                     <tr>
                         <td style="width: 2px;">
-                            {% if lawyer.advogado_responsavel.image %}
-                            <img src="{{ lawyer.advogado_responsavel.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                            {% if lawyer.image %}
+                                <img src="{{ lawyer.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% else %}
-                            <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                                <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% endif %}
                         </td>
                         <td>
@@ -58,6 +60,17 @@
                         <td>{{ lawyer.email }}</td>
                         <td>{% if lawyer.user %}{{ lawyer.user }}{% else %} Sem usuário{% endif %}</td>
                         <td>{{ lawyer.oab }}</td>
+
+                        {% if lawyer.revenue == 0 %}
+                            <td>R${{ lawyer.revenue }}</td>
+                        {% elif lawyer.revenue > 0 %}
+                            <td class="text-success">R$+{{ lawyer.revenue }}</td>
+                        {% else %}
+                            <td class="text-danger">R${{ lawyer.revenue }}</td>
+                        {% endif %}
+
+
+                        <td>{{ lawyer.lawsuit_lawyer.count }}</td>
                         <td>
                             <a href="" data-toggle="modal" data-target="#lawyer-delete-modal-{{lawyer.pk}}">
                                 <i class="fas fa-trash-alt" style="color: #ff0000;"></i>
