--- a/code/registry/templates/registry_create.html
+++ b/code/registry/templates/registry_create.html
@@ -25,11 +25,11 @@
                 {% endfor %}
                 <div class="form-group">
                     <label for="inputName">CPF</label>
-                    <input type="text" value="{{registry.cpf}}" name="cpf" class="form-control cpf"/>
+                    <input type="text" value="{{registry.registry_cpf}}" name="registry_cpf" class="form-control cpf"/>
                 </div>
                 <div class="form-group">
                     <label for="inputName">CNPJ</label>
-                    <input type="text" value="{{registry.cnpj}}" name="cnpj" class="form-control cnpj"/>
+                    <input type="text" value="{{registry.registry_cnpj}}" name="registry_cnpj" class="form-control cnpj"/>
                 </div>
                 
                 <button type="submit" class="btn btn-lg btn-success">
