--- a/code/registry/templates/registry_detail/registry_infos.html
+++ b/code/registry/templates/registry_detail/registry_infos.html
@@ -12,13 +12,13 @@
     <div class="form-group row">
         <label for="inputName" class="col-sm-2 col-form-label">CPF</label>
         <div class="col-sm-10">
-            <input type="text" value="{{registry.cpf}}" name="cpf" class="form-control cpf"/>
+            <input type="text" value="{{registry.registry_cpf}}" name="registry_cpf" class="form-control cpf"/>
         </div>
     </div>
     <div class="form-group row">
         <label for="inputName" class="col-sm-2 col-form-label">CNPJ</label>
         <div class="col-sm-10">
-            <input type="text" value="{{registry.cnpj}}" name="cnpj" class="form-control cnpj"/>
+            <input type="text" value="{{registry.registry_cnpj}}" name="registry_cnpj" class="form-control cnpj"/>
         </div>
     </div>
     {% if registry.image %}
